mutants.out/log/crates__script__src__lib.rs_line_250_col_9.log

*** crates/script/src/lib.rs:250:9: replace ScriptRunner::run -> Result<ScriptOutput, ScriptError> with Ok(Default::default())

*** mutation diff:
--- crates/script/src/lib.rs
+++ replace ScriptRunner::run -> Result<ScriptOutput, ScriptError> with Ok(Default::default())
@@ -242,38 +242,17 @@
         Ok(CompiledScript {
             workspace,
             binary_path,
             input_json: request.input_json.clone(),
         })
     }
 
     pub fn run(&self, request: &ScriptRequest) -> Result<ScriptOutput, ScriptError> {
-        let compiled = self.compile(request)?;
-
-        let mut child = Command::new(compiled.binary_path())
-            .stdin(Stdio::piped())
-            .stdout(Stdio::piped())
-            .stderr(Stdio::piped())
-            .spawn()
-            .map_err(to_io_error)?;
-
-        if let Some(stdin) = child.stdin.as_mut() {
-            stdin
-                .write_all(compiled.input_json().as_bytes())
-                .map_err(to_io_error)?;
-        }
-
-        let output = child.wait_with_output().map_err(to_io_error)?;
-
-        Ok(ScriptOutput {
-            stdout: String::from_utf8_lossy(&output.stdout).into_owned(),
-            stderr: String::from_utf8_lossy(&output.stderr).into_owned(),
-            exit_code: output.status.code(),
-        })
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 #[derive(Debug)]
 pub struct CompiledScript {
     workspace: ScriptWorkspace,
     binary_path: PathBuf,
     input_json: String,


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=script@0.1.0
       Dirty script v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/crates/script): the file `crates/script/src/lib.rs` has changed (1778057829.882852163s, 6s after last build at 1778057823.267254356s)
   Compiling script v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/crates/script)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=19ba3a930712f621 -C extra-filename=-d9ac782f4dc64702 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=fb3202c648cb3754 -C extra-filename=-d02cc1a249e66324 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps`
warning: unused import: `std::process::Stdio`
 --> crates/script/src/lib.rs:8:5
  |
8 | use std::process::Stdio;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `ScriptOutput: Default` is not satisfied
   --> crates/script/src/lib.rs:250:12
    |
250 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ScriptOutput`
    |
help: consider annotating `ScriptOutput` with `#[derive(Default)]`
    |
 83 + #[derive(Default)]
 84 | pub struct ScriptOutput {
    |

warning: unused import: `std::io::Write`
 --> crates/script/src/lib.rs:4:5
  |
4 | use std::io::Write;
  |     ^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `script` (lib) generated 2 warnings (1 duplicate)
error: could not compile `script` (lib) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=fb3202c648cb3754 -C extra-filename=-d02cc1a249e66324 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `script` (lib test) generated 2 warnings (1 duplicate)
error: could not compile `script` (lib test) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=19ba3a930712f621 -C extra-filename=-d9ac782f4dc64702 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-jZ2pOT.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
